--- a/C++/StandardInjection/StandardInjection.vcxproj
+++ b/C++/StandardInjection/StandardInjection.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="StandardInjection.cpp" />
+    <ClCompile Include="SimpleDLLInjection.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
